tests/reference/pass_dead_code_removal-case_06-e7f007f.stderr
semantic error: The RHS character len must be known at compile time
  --> tests/../integration_tests/case_06.f90:13:5
   |
13 |     character, parameter :: grade_fixed = 'B'
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
